--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         <li class="nav-item">
             <a class="nav-link " href="profile.html">Profile</a>
           </li>
+          <li class="nav-link">
+              <a class="nav-link " href="feedback.html">Feedback</a>
         
       </ul>
     </div>
